<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_lager"
            android:layout_marginEnd="@dimen/margin_lager"
            android:layout_marginBottom="@dimen/margin_lager"
            android:text="@string/content_confirm_new_password"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/text_small_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_lager"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password"
                style="@style/ConfirmEmailEditTextStyle"
                android:autofillHints=""
                android:hint="@string/password" />

            <ImageView
                android:id="@+id/iv_hint_password"
                style="@style/ConfirmEmailIconHintPasswordStyle"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <View style="@style/ConfirmEmailDividerStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_lager"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_password_confirm"
                style="@style/ConfirmEmailEditTextStyle"
                android:autofillHints=""
                android:hint="@string/password_confirm" />

            <ImageView
                android:id="@+id/iv_hint_confirm_password"
                style="@style/ConfirmEmailIconHintPasswordStyle"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <View
            style="@style/ConfirmEmailDividerStyle"
            android:layout_marginBottom="@dimen/margin_lager" />

        <TextView
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:background="@drawable/bg_border_solid_blue"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/change_password"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_normal_size_16" />
    </LinearLayout>
</FrameLayout>
